@@ -3,6 +3,14 @@ nomacs 3.8.0
 - Full PhaseOne Support (Monochrome)
 - RAW loader optimized (less RAM & speed-up)
 - RAW loading improved (pink pixels reduced)
+- New MSI installer (Windows)
+
+- Drag & Drop fixed
+- Batch resize fixed
+- GPS link fixed
+- Translation downloader fixed
+
+
 
 nomacs 3.6.1
 ============
